# big-template

./: README.md
client/: big-template-client.cabal  big-template.cabal  default.nix  shell.nix  stack.yaml
client/app/: Main.hs
client/src/BigTemplate/: Client.hs
common/: big-template-common.cabal
common/src/BigTemplate/: Routes.hs  Types.hs
server/: big-template-server.cabal  big-template.cabal  stack.yaml
server/app/: Main.hs
server/src/BigTemplate/: Server.hs
