name:                big-template
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/ojw/big-template#readme
license:             BSD3
license-file:        LICENSE
author:              James Orr
maintainer:          orrjamesw@gmail.com
copyright:           Copyright: (c) 2016 James Orr
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src, ../common/src
  exposed-modules:     BigTemplate.Client
                     , BigTemplate.Types
                     , Servant.Reflex
                     , Servant.Common.BaseUrl
                     , Servant.Common.Req
  build-depends:       base >= 4.7 && < 5
                     , haskell-src-exts
                     , reflex
                     , reflex-dom
                     , containers
                     , safe
                     , text
                     , aeson
                     , servant
                     , servant-foreign
                     -- just for servant-reflex
                     , exceptions
                     , network-uri
                     , bytestring
                     , http-api-data
                     , transformers
                     , case-insensitive
                     , string-conversions
                     , http-media
  default-language:    Haskell2010

executable big-template-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , big-template
                     , haskell-src-exts
                     , reflex
                     , reflex-dom
                     , containers
                     , safe
  default-language:    Haskell2010

test-suite big-template-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , big-template
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ojw/big-template
