name:                big-template-common
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/ojw/big-template#readme
license:             BSD3
license-file:        LICENSE
author:              James Orr
maintainer:          orrjamesw@gmail.com
copyright:           Copyright: (c) 2016 James Orr
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src, ../common/src
  exposed-modules:
  build-depends:       base >= 4.7 && < 5
                     , servant
                     , servant-server
                     , containers
                     , wai
                     , warp
                     , text
                     , aeson
 default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ojw/big-template
